# rust-grpc-exchange

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yaml  rust.yml
client/: client.rs  rate_client.rs
docker/: Dockerfile  docker-compose.yaml
ops/docker/: Dockerfile
proto/: pair.proto  rate.proto
src/: main.rs
src/controller/: controller.rs
src/delivery/grpc/: grpc.rs  rate.rs
src/domain/: pair.rs
src/grpc_proto/: .gitignore  mod.rs  pair.rs  pair_grpc.rs  rate.rs  rate_grpc.rs
src/services/: exchange_service.rs  manager.rs  mod.rs  rate_service.rs  services.rs
src/use_cases/: get_exchange_use_case.rs  mod.rs  use_case.rs
