[package]
name = "rust-grpc-exchange"
version = "0.1.0"
authors = ["vizitiuRoman <vizitiuroman.md@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "client/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
grpcio = "0.8.2"
protobuf = "2.22.0"
futures = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
curl = "0.4.34"
log = "0.4.14"
env_logger = "0.8.3"
log4rs = "1.0.0"

[build-dependencies]
protoc-grpcio = "3.0.0"
