[package]
name = "rust-grpc-exchange"
version = "0.1.0"
authors = ["vizitiuRoman <vizitiuroman.md@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "client/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
grpcio = "0.9.1"
protobuf = "2.10.3"
futures = "0.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
dotenv = "0.15.0"
curl = "0.4.41"
log = "0.4.14"
env_logger = "0.9.0"
log4rs = "1.0.0"

[build-dependencies]
protoc-grpcio = "3.0.0"
